--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,9 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M3</version>
 				<configuration>
+				
+                                        <testFailureIgnore>true</testFailureIgnore>
+  
 					<suiteXmlFiles>
 						<suiteXmlFile>testng.xml</suiteXmlFile>
 					</suiteXmlFiles>
