--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -22,3 +22,8 @@ jobs:
         java-version: '11'   
     - name: Build with Maven
       run: mvn clean test
+    - name: Demploy report page to Github page
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN}}
+        publish_dirt: ./target
