--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,4 +26,4 @@ jobs:
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN}}
-        publish_dirt: /extentReport\databaseTestExtentReport.html
+        publish_dirt: ./extentReport/databaseTestExtentReport.html
