--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,11 +19,11 @@ jobs:
     - name: Set up JDK 11
       uses: actions/setup-java@v1
       with:
-        java-version: '11'   
+        java-version: '8'   
     - name: Build with Maven
       run: mvn clean test
     - name: Demploy report page to Github page
-      uses: peaceiris/actions-gh-pages@v3
+      uses: JamesIves/github-pages-deploy-action@4.1.5
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN}}
-        publish_dirt: ./extentReport/databaseTestExtentReport.html
+        branch : gh-pages
+        folder : ./target
